assets/sass/expander.scss
.o-expander > hr {
  margin: 0;
}

.o-expander__summary {
  display: flex;
  padding: 1.2rem;
  gap: 0.5rem;
  align-items: center;
  transition: background 0.3s ease;
  justify-content: space-between;
  border-radius: var(--border-radius-m);

  @media print {
    padding: 0.6rem;
  }

  &:hover,
  &:focus {
    .o-expander__title-text {
      text-decoration: underline;
    }

    background: rgba($link-hovered, 0.15);
  }

  .o-expander__title-text {
    font-weight: 700;
    margin-bottom: 0;
  }

  @include focus-indicator(0.2rem);

  > .a-icon {
    transition: transform 0.2s;

    @media print {
      display: none;
    }
  }

  &-title {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    line-height: 1.25;
  }
}

details[open] > .o-expander__summary {
  &:hover,
  &:focus {
    border-radius: var(--border-radius-m) var(--border-radius-m) 0 0;
  }
}

.o-expander__content {
  padding: 1.2rem;

  @media print {
    padding: 0.6rem;
  }

  // Remove margins from last elements of expander (up to 3 levels deep)
  & > *:last-child,
  & > *:last-child > *:last-child,
  & > *:last-child > *:last-child > *:last-child {
    margin-bottom: 0;
  }

  figure > figcaption {
    background-color: var(--bg-default);
  }
}

details {
  position: relative;
  background-color: var(--bg-neutral);
  border-radius: var(--border-radius-m);
  margin-bottom: 1.2rem;
  interpolate-size: allow-keywords;

  &::details-content {
    overflow: hidden;
    block-size: 0;
    transition:
      block-size 0.25s ease,
      content-visibility 0.25s ease allow-discrete;

    @media (prefers-reduced-motion: reduce) {
      transition: none;
    }

    @media print {
      content-visibility: visible;
      height: auto !important;
    }
  }

  &[open]::details-content {
    block-size: auto;
  }

  table {
    width: 100%;
    margin-left: 0;
  }

  > summary {
    list-style-type: none;
  }

  > div {
    overflow-x: auto;
  }

  > summary::-webkit-details-marker {
    display: none;
  }

  @media print {
    border: 0.2rem solid #bbb;
    page-break-inside: avoid;
    display: block;
  }
}

details[open] > .o-expander__summary > .a-icon {
  transform: rotate(180deg);
}

